@@ -18,11 +18,14 @@
  */
 package com.paystack.fineract.portfolio.account.service;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-import com.paystack.fineract.portfolio.account.domain.ChargeSplit;
 import com.paystack.fineract.portfolio.account.domain.ChargeSplitRepository;
 import com.paystack.fineract.portfolio.account.domain.FeeSplitAuditRepository;
 import java.math.BigDecimal;
@@ -65,7 +68,6 @@ class FeeSplitServiceTest {
     private Charge charge;
     private ClientTransaction clientTransaction;
     private BigDecimal totalFeeAmount;
-    private List<ChargeSplit> splits;
 
     @BeforeEach
     void setUp() {
@@ -79,16 +81,6 @@ class FeeSplitServiceTest {
         when(charge.getId()).thenReturn(1L);
         when(charge.isEnableFeeSplit()).thenReturn(true);
 
-        // Create mock splits
-        ChargeSplit split1 = mock(ChargeSplit.class);
-        when(split1.isPercentageSplit()).thenReturn(true);
-        when(split1.getSplitValue()).thenReturn(new BigDecimal("50.00"));
-
-        ChargeSplit split2 = mock(ChargeSplit.class);
-        when(split2.isPercentageSplit()).thenReturn(true);
-        when(split2.getSplitValue()).thenReturn(new BigDecimal("30.00"));
-
-        splits = Arrays.asList(split1, split2);
         totalFeeAmount = new BigDecimal("100.00");
     }
 
@@ -116,7 +108,7 @@ class FeeSplitServiceTest {
     void testProcessFeeSplit_WhenNoSplitsFound_ShouldNotProcessSplits() {
         // Given
         when(charge.isEnableFeeSplit()).thenReturn(true);
-        when(splitRepository.findActiveSplitsByChargeId(1L)).thenReturn(Arrays.asList());
+        when(splitRepository.findActiveSplitsByChargeId(1L)).thenReturn(List.of());
         clientTransaction = mock(ClientTransaction.class);
         when(clientTransaction.getId()).thenReturn(1L);
 
